istio-demo/VirtualService.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  hosts:
  - my-host.com
  http:
  - route:
    - destination:
        host: my-host.com
        subset: v1
      weight: 80      # assign 80 % traffic to v1
    - destination:
        host: my-host.com
        subset: v2
      weight: 20       # assign 20 % traffic to v2
    timeout: 9s
    retries:
      attempts: 3
      perTryTimeout: 3s
