istio-demo/hello-virtual-service.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-js-vs
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        prefix:  /hello-app
    rewrite:
      uri: /api
    route:
    - destination:
        host: hello-js-svc
        port:
          number: 80
    timeout: 9s
    retries:
      attempts: 3
      perTryTimeout: 3s
      retryOn: 5xx
